back and forth to index page

--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -13,4 +13,5 @@
     {% endfor %}
 </fieldset>
 <input type="submit" value="Vote">
+    <a href="{% url 'polls:index' %}" style="color: white">Back to Polls List</a>
 </form>
