--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -4,7 +4,8 @@
 {% if latest_question_list %}
     <ul>
     {% for question in latest_question_list %}
-        <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
+        <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a>
+        <a href="{% url 'polls:results' question.id %}" style="color: red">Result</a></li>
     {% endfor %}
     </ul>
 {% else %}
