--- a/polls/templates/registration/logged_out.html
+++ b/polls/templates/registration/logged_out.html
@@ -4,4 +4,6 @@
    <p>
    Do you want to vote again?
    <a href="{% url 'login'%}">Login again</a>
+   Or view without login
+      <a href="{% url 'polls:index'%}">Polls List</a>
    </body>
