modify login page

--- a/polls/templates/registration/login.html
+++ b/polls/templates/registration/login.html
@@ -14,6 +14,10 @@
 {# If you have a password_reset template, then add here #}
 <p>
 <a href="{% url 'password_reset' %}">Forgot password?</a>
+  <p>
+  <label>{{"View result without login"}}</label>
+<a href="{% url 'polls:index' %}">Go to poll list</a>
+  </p>
 </p>
 </body>
 </html>
