--- a/polls/templates/registration/login.html
+++ b/polls/templates/registration/login.html
@@ -1,6 +1,10 @@
+{% load static %}
+
+<link rel="stylesheet" href="{% static 'polls/style.css' %}">
+
 <html>
 <body>
-<h2>Login</h2>
+<h2 style="color: white">Login</h2>
 <form method="post">
   {% csrf_token %}
   <table>
@@ -13,10 +17,10 @@
  </form>
 {# If you have a password_reset template, then add here #}
 <p>
-<a href="{% url 'password_reset' %}">Forgot password?</a>
+<a href="{% url 'password_reset' %}" style="color: white">Forgot password?</a>
   <p>
-  <label>{{"View result without login"}}</label>
-<a href="{% url 'polls:index' %}">Go to poll list</a>
+  <label style="color: white">{{"View result without login"}}</label>
+<a href="{% url 'polls:index' %}" style="color: white">Go to poll list</a>
   </p>
 </p>
 </body>
